--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,6 @@
     "forceConsistentCasingInFileNames": true,
     "incremental": true,
     "allowUnreachableCode": true,
+    "declaration": true,
   }
 }
