--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     ],
     "moduleResolution": "node",
     "allowJs": true,
-    "outDir": "build",
+    "outDir": "lib",
     "removeComments": true,
     "rootDir": "src",
     "strict": true,
