--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "socket-log-client",
   "version": "1.0.0",
   "description": "A simple client for the NodeSocketLog server",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
