--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "@types/ws": "^8.2.0",
-    "check-disk-space": "^3.0.1",
+    "systeminformation": "^5.10.0",
     "ws": "^8.2.0"
   }
 }
