--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "GitHub/McDuckes",
+  "author": "GitHub/gudatr",
   "license": "MIT",
   "dependencies": {
     "systeminformation": "^5.10.0",
