--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ws": "^8.2.0"
   },
   "devDependencies": {
-    "@types/ws": "^8.2.0"
+    "@types/ws": "^8.2.0",
+    "@types/node": "18.6.0"
   }
 }
