--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "license": "MIT",
   "dependencies": {
     "systeminformation": "^5.10.0",
+    "utf-8-validate": "^5.0.10",
     "ws": "^8.2.0"
   },
   "devDependencies": {
-    "@types/ws": "^8.2.0",
-    "@types/node": "18.6.0"
+    "@types/node": "18.6.0",
+    "@types/ws": "^8.2.0"
   }
 }
