--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "license": "MIT",
   "dependencies": {
     "systeminformation": "^5.10.0",
-    "utf-8-validate": "^5.0.10",
     "ws": "^8.2.0"
   },
   "devDependencies": {
     "@types/node": "18.6.0",
-    "@types/ws": "^8.2.0"
+    "@types/ws": "8.5.4"
+  },
+  "optionalDependencies": {
+    "bufferutil": "^4.0.7",
+    "utf-8-validate": "^6.0.3"
   }
 }
